update about text

--- a/index.html
+++ b/index.html
@@ -632,9 +632,11 @@
         </div>
         <div class="about-content">
             <h2>About Adora Bio Solutions</h2>
-            <p>We are a premier consulting firm specializing in vaccine and immunotherapeutics development and commercialization. Our team of experienced scientists, regulatory experts, and industry veterans brings decades of combined expertise to every project.</p>
-            <p>Our mission is to accelerate the development of life-saving vaccines and immunotherapies while ensuring the highest standards of safety, efficacy, and regulatory compliance. We partner with pharmaceutical companies, biotech startups, and research institutions worldwide.</p>
-            <p>With a proven track record of successful vaccine launches and regulatory approvals, we provide the strategic guidance and technical expertise needed to navigate the complex landscape of biopharmaceutical development.</p>
+            <p>We are a consulting firm specializing in vaccine and immunotherapeutics early technical and clinical development development.</p>
+            <p>Our mission is to help our partners in driving pipeline innovation and enable growth. </p> 
+			<p>We help accelerating the establishment of feasibility, technical development, proof of concept and early development of novel vaccines and immunotherapies by employing most advanced science and technologies while ensuring the highest standards of safety, efficacy, and regulatory compliance.</p>
+            <p>The founder, Dr. Vassilev, has a proven experience track record: 23 years in pharmaceutical industry development and 10 years in academic research.</p> 
+			<p>We provide strategic guidance and scientific/technical expertise needed to navigate the complex landscape of biopharmaceutical development.</p>
         </div>
     </section>
 
