--- a/index.html
+++ b/index.html
@@ -607,22 +607,18 @@
 
     <section class="stats">
         <div class="stats-container">
-            <div class="stat-item">
-                <h2>150+</h2>
-                <p>Successful Projects</p>
-            </div>
-            <div class="stat-item">
-                <h2>40+</h2>
-                <p>Countries Served</p>
-            </div>
-            <div class="stat-item">
-                <h2>25</h2>
+			<div class="stat-item">
+                <h2>23</h2>
                 <p>Years Experience</p>
             </div>
-            <div class="stat-item">
-                <h2>98%</h2>
-                <p>Client Satisfaction</p>
+			<div class="stat-item">
+                <h2>70</h2>
+                <p>Publications</p>
             </div>
+            <div class="stat-item">
+                <h2>100+</h2>
+                <p>Lectures</p>
+            </div> 
         </div>
     </section>
 
