--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
         <div class="footer-content">
             <div>
                 <h3>Adora Bio Solutions</h3>
-                <p>Leading the future of vaccine and immunotherapeutics innovation through expert consulting and strategic partnership.</p>
+                <p>Facilitating the innovation and development of vaccines and immunotherapeutics through expert consulting and strategic partnership.</p>
             </div>
             <div>
                 <h3>Services</h3>
