--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
     <section class="hero" id="home">
         <h1>Vaccine & Immunotherapeutics Development Consultancy</h1>
         <p>Expert guidance for pharmaceutical innovation</p>
-        <a href="mailto:info@adorabiosolutions.com?subject=Consultation%20Request&body=Hello%2C%0D%0A%0D%0AI%20would%20like%20to%20schedule%20a%20consultation%20regarding..." class="cta-button">Schedule Consultation</a>
+        <a href="mailto:vassilev@adorabiosolutions.com?subject=Consultation%20Request&body=Hello%2C%0D%0A%0D%0AI%20would%20like%20to%20schedule%20a%20consultation%20regarding..." class="cta-button">Schedule Consultation</a>
     </section>
 
     <section class="services" id="services">
