--- a/index.html
+++ b/index.html
@@ -608,16 +608,16 @@
     <section class="stats">
         <div class="stats-container">
 			<div class="stat-item">
-                <h2>23</h2>
-                <p>Years Experience</p>
-            </div>
-			<div class="stat-item">
-                <h2>70</h2>
+                <h2>70+</h2>
                 <p>Publications</p>
             </div>
+			<div class="stat-item">
+                <h2>33+</h2>
+                <p>Years Experience</p>
+            </div>
             <div class="stat-item">
-                <h2>75+</h2>
-                <p>Lectures</p>
+                <h2>15+</h2>
+                <p>Patents</p>
             </div> 
         </div>
     </section>
