--- a/index2.html
+++ b/index2.html
@@ -369,10 +369,10 @@
         }
 		
 		.cta-section {
-                        background: linear-gradient(135deg, #112857 0%, #0D5541 100%);
+            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
             padding: 40px 2rem;
             text-align: center;
-            color: white;
+            color: #0D5541;
         }
 
         .cta-container {
@@ -390,6 +390,7 @@
             font-size: 1.1rem;
             margin-bottom: 1.5rem;
             opacity: 0.95;
+			color: #2c3e50;
         }
 
         .cta-btn {
