--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             margin: 80px auto;
             padding: 0 2rem;
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 1fr 2fr;
             gap: 4rem;
             align-items: center;
             scroll-margin-top: 130px;
@@ -340,12 +340,29 @@
 
         .about-image {
             width: 100%;
-            height: 500px;
+            height: 400px;
             border-radius: 20px;
             display: flex;
             align-items: center;
             justify-content: center;
             padding: 10px;
+        }
+		
+		@media (max-width: 500px) {
+            .about-image {
+                height: 300px;
+            }
+        }
+		
+		@media (max-width: 600px) {
+            .about-image {
+                height: 350px;
+            }
+        }
+		@media (max-width: 992px) {
+            .about {
+				grid-template-columns: 1fr 1fr;
+			}
         }
 
         .about-image img {
