update Clinical Development Strategy section

--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@
                 height: 350px;
             }
         }
+		
 		@media (max-width: 992px) {
             .about {
 				grid-template-columns: 1fr 1fr;
@@ -648,7 +649,7 @@
                     <img src="icons/emoji_u1f52c.svg" alt="🔬">
                 </div>
                 <h3>Clinical Development Strategy</h3>
-                <p>Support the design of clinical trial protocols, including Phase I, II, and III studies. Consulting on clinical development aspects, including, but not limited to, critically reviewing clinical development plans, clinical study protocols, and study submission packages to national and supranational regulatory authorities (EMA, FDA, etc.). Guidance in selecting appropriate endpoints and patient populations for trials. Support on immunological analysis and determination of objectives and endpoints, selection and quality aspects of appropriate  tests and reporting of the results. Consultancy on interaction with Contract Research Organizations (CROs), which are responsible for the operational aspects of studies. </p>
+                <p>Consulting on clinical development aspects, including critically reviewing clinical development plans, clinical study protocols, and study submission packages to national and supranational regulatory authorities. Guidance in selecting endpoints and patient populations for trials. Support on selection of appropriate tests including quality aspects and subsequent immunological analysis and data reporting. Consultancy on interaction with Contract Research Organization. </p>
             </div>
 			<div class="service-card" id="regulatory-compliance">
                 <div class="service-icon">
